# anemia-risk-prediction

./: .gitignore  README.md  main.py  pyproject.toml
docs/: plan_entrenamiento_integral.md  resumen_ejecutivo_exploracion.md  resumen_ejecutivo_preprocesamiento.md
notebooks/: 01_exploracion.ipynb  02_preprocesamiento.ipynb  preprocess.py
reports/: reporte_Masivo_ArbolDecision.txt  reporte_Masivo_RegresionLogistica.txt  reporte_SocioMedico_ArbolDecision.txt  reporte_SocioMedico_RegresionLogistica.txt
src/: config.py  predict.py  preprocess.py  train.py
