[project]
name = "anemia-risk-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imbalanced-learn>=0.14.2",
    "jupyterlab>=4.5.8",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
]
